--- a/TODO
+++ b/TODO
@@ -1,17 +1,20 @@
-Component			Todo
+Component           Todo
 ------------------+----------------------------------------------------------------------
-miniorganizer		Refactor models.
+miniorganizer       Refactor models.
 miniorganizer       Cancelling the editing of an event/todo still adds (maybe modifies too?) the event/todo.
 miniorganizer       When loading a ical that contains errors (empty), program crashes.
 miniorganizer       Warn on unsaved changes.
+event               Double click on day == add new event.
+event               Right click on day == popup menu.
+miniorganizer       Right click on event/todo == popup menu.
 event               When adding a new alarm to an event and then canceling the alarm and then pressing 'ok' an error occurs.
-event				Recurring events.
-todo				Composite todo's.
-todo				Show percentage complete (or progressbar) for composite and normal todos.
-miniorganizer		Inputting a from/to date of 05-23-08 21:00 to 05-24-08 00:00 makes the duration 1 day, hours (should be 3 hours). Does work when entering 00:01
-miniorganizer 		RadioButton errors.
-miniorganizer 		Implement notes
-miniorganizer 		Under a raw installation of Debian (4.0), miniorganizer reports various bugs. Fix these.
-miniorganizer 		An event which is a whole day event, and which runs from 06/13/08 to 06/16/08 doesn't appear in the calendar on the 16th (because it ends on 06/16/08 at 00:00).
-notifier			Automatic forking in background.
-notifier			Add hour snooze.
+event               Recurring events.
+todo                Composite todo's.
+todo                Show percentage complete (or progressbar) for composite and normal todos.
+miniorganizer       Inputting a from/to date of 05-23-08 21:00 to 05-24-08 00:00 makes the duration 1 day, hours (should be 3 hours). Does work when entering 00:01
+miniorganizer       RadioButton errors.
+miniorganizer       Implement notes
+miniorganizer       Under a raw installation of Debian (4.0), miniorganizer reports various bugs. Fix these.
+miniorganizer       An event which is a whole day event, and which runs from 06/13/08 to 06/16/08 doesn't appear in the calendar on the 16th (because it ends on 06/16/08 at 00:00).
+notifier            Automatic forking in background.
+notifier            Add hour snooze.
