--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 Component           Todo
 ------------------+----------------------------------------------------------------------
+miniorganizer       Changes have not been saved!
 miniorganizer       Prevent miniorganizer from running multiple times, cause it'll fuck up calendars
 miniorganizer       Refactor models.
 miniorganizer       Cancelling the editing of an event/todo still adds (maybe modifies too?) the event/todo.
