Added 'manual page' todo.
git-svn-id: https://svn.electricmonk.nl/svn/miniorganizer/trunk@37 37481b89-4a6d-4120-abc7-7d70a5cf72f2

--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 Component           Todo
 ------------------+----------------------------------------------------------------------
 install             README in root dir of archive.
+miniorganizer       Manual page.
 miniorganizer       Auto-save doesn't work.
 miniorganizer       Changes have not been saved!
 miniorganizer       Prevent miniorganizer from running multiple times, cause it'll fuck up calendars
