When canceling adding/editing of an event or todo, the event/todo is no longer added to the list anyway.
git-svn-id: https://svn.electricmonk.nl/svn/miniorganizer/trunk@43 37481b89-4a6d-4120-abc7-7d70a5cf72f2

--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 Component           Todo
 ------------------+----------------------------------------------------------------------
 install             README in root dir of archive.
-miniorganizer       Cancelling the editing of an event/todo still adds (maybe modifies too?) the event/todo.
+miniorganizer       Modifying an event (todo too?) doesn't signal that the calendar has changed.
 miniorganizer       Manual page.
 miniorganizer       Prevent miniorganizer from running multiple times, cause it'll fuck up calendars
 miniorganizer       Refactor models.
