--- a/README
+++ b/README
@@ -3,3 +3,4 @@ MiniOrganizer
 
 Please check the userguide (docs/userguide/userguide.txt) and the
 developerguide (docs/developerguide/developerguide.txt) for more information.
+test
